[package]
name = "fc_stats"
version = "0.1.1"
edition = "2021"
description = "munin graph plugin for FC host statistic, 1second resolution"
license = "GPL-3.0-only"
authors = [ "Joerg Jaspert <joerg@ganneff.de>" ]
readme = "README.md"
repository = "https://github.com/Ganneff/fc_stats"
keywords = [ "munin", "statistics", "daemon" ]

[dependencies]
spin_sleep = "^1.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
simple_logger = "^2.1"
daemonize = "0.4"
tempfile = "^3.3"
fs2 = "0.4"
parse_int = "^0.6"

[profile.release]
lto = true
codegen-units = 1
