[package]
name = "fc_stats"
version = "0.1.2"
edition = "2021"
description = "munin graph plugin for FC host statistic, 1second resolution"
license = "GPL-3.0-only"
authors = [ "Joerg Jaspert <joerg@ganneff.de>" ]
readme = "README.md"
repository = "https://github.com/Ganneff/fc_stats"
keywords = [ "munin", "statistics", "daemon" ]

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
simple_logger = "^2.1"
tempfile = "^3.3"
parse_int = "^0.6"
munin-plugin = "0.2"
anyhow = "1.0.57"

[profile.release]
lto = true
codegen-units = 1
